samples/_failures_safe/1761796038_60d0bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a72238d.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_6a72238d.c:153:14: error: ‘TOKEN’ undeclared (first use in this function)
  153 |         case TOKEN
      |              ^~~~~
./samples/SAFE/__tmp_6a72238d.c:153:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6a72238d.c:153:9: error: expected ‘:’ or ‘...’ at end of input
  153 |         case TOKEN
      |         ^~~~
./samples/SAFE/__tmp_6a72238d.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6a72238d.c:153:9: error: expected declaration or statement at end of input
